# altr

./: .gitignore  .mcp.json  CLAUDE.md  MASTER_PLAN.md  PLAN.md  README.md  conext.txt  eslint.config.js  package.json  tsconfig.json  turbo.json  vite.config.ts
.agents/: product-marketing-context.md
.firecrawl/: ai-seo-skill.md  ai-seo.md  content-strategy-skill.md  content-strategy.md  marketing-ideas-skill.md  marketing-ideas.md  marketing-psychology-skill.md  page-cro-skill.md  page-cro.md  seo-audit-skill.md  seo-audit.md  site-architecture-skill.md  site-architecture.md
.github/workflows/: ci-comment-trigger.yml  lite.yml
NOTES/: handoff-2026-04-21-pm.md  handoff-2026-04-21.md  strategy-competitive-synthesis-2026-04-30.md  website-analysis-playbook.md
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: index.css  main.tsx
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  telemetry.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/: README.md
apps/desktop/src/lib/: graph.ts  stream.ts  tauri.ts
apps/desktop/src/styles/: tokens.css
apps/landing/: .env.example  components.json  mise.toml  next.config.ts  package.json  sanity.config.ts  vercel.json
apps/landing/.firecrawl/sites/: mastra-page.html  stripe-page.html  tryclean-page.html
apps/landing/public/: robots.txt  sitemap.xml
apps/landing/src/: app.css  middleware.ts  proxy.ts
apps/landing/src/app/: sitemap.ts
apps/landing/src/components/: altr-app-preview.tsx
apps/landing/src/content/: index.ts  legal.ts
docs/: docs-strategy.md  engineering-playbook.md  infrastructure.md  landing-v1-plan.md
docs/superpowers/plans/: 2026-04-23-landing-page-restructure.md
references/design/altr.run-designs/: Altr Brand v2.html  Altr Design System - Glass.html  Altr Design System.html  Altr Landing v2.html  Altr Landing v3.html  Altr Landing v4.html  Altr Landing v5.html  Altr Landing v6.html  Altr Landing v7.html  Altr Landing v8.html  Altr Landing.html  Altr Logo Exploration.html
scripts/: setup-gstack.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: keychain.rs  telemetry.rs
src-tauri/src/agents/: eng.rs  pax.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/graph/: mod.rs
src/features/channel/: index.ts
src/features/projects/: index.ts
src/features/settings/: index.ts
src/features/specs/: index.ts
(+117 files in other folders)
