[package]
name = "altr-desktop"
version = "0.0.1"
description = "Altr — AI-native workspace for product teams (desktop shell)"
authors = ["Mukul Chugh <mukul@altr.run>"]
edition = "2021"
rust-version = "1.77"
homepage = "https://altr.run"
repository = "https://github.com/altr-run/altr"
license = "UNLICENSED"
publish = false

# Keep a single crate for v0.1 (see CLAUDE.md §4 + research on GitButler).
# When the agent runtime grows, extract `altr-core` as a library crate and
# keep `altr-desktop` as the Tauri binary. Don't pre-split.

[lib]
name = "altr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core + plugins ---
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# --- Async runtime + util ---
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Errors + logging ---
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- HTTP / LLM client ---
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
eventsource-stream = "0.2"

# --- Persistence ---
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
] }

# --- IDs / time ---
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Subprocess / FS / Git ---
portable-pty = "0.8"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
git2 = { version = "0.19", default-features = false, features = [
    "vendored-openssl",
    "vendored-libgit2",
] }

# --- Secrets ---
keyring = "3"

# Default release profile — optimize size + panic=abort for a smaller desktop bundle.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# Dev profile — keep compile fast, allow unwind so traces are readable.
[profile.dev]
incremental = true
